# slack-mcp-server

./: .env.example  .gitignore  README.md  pomodoro_timer.py  project_summary.md  pyproject.toml  requirements.txt  setup_guide.md  slack_api_client.py  slack_mcp_server.py
