[project]
name = "slack-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.4",
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.5.2",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "pillow>=11.2.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
]
